Add a simple test for setting the values of a vector/mask Currently, this takes far too long to compile, so some other solution will have to be found to check all types and sizes

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,7 +2,8 @@ options_sub = subproject('options')
 args = options_sub.get_variable('all_args')
 
 foreach name, deps : {
-  'basic': []
+  'basic': [],
+  'set': [],
 }
   space_name = name.replace('-', ' ')
   test(
