Add a test for horizontal operations, which revealed issues with `horizontal_min`/`horizontal_max` (especially with 8-bit values) - All horizonal minimum/maximum implementations for 8/16/32-bit integers have been updated

--- a/test/meson.build
+++ b/test/meson.build
@@ -3,14 +3,14 @@ args = options_sub.get_variable('all_args')
 
 arches = x86_64_levels + ['native']
 
-foreach name, deps : {'basic': [], 'componentwise': [], 'set': []}
+foreach name : ['basic', 'componentwise', 'horizontal', 'set']
   foreach arch : arches
     space_name = name.replace('-', ' ')
     exe = executable(
       f'test-@name@-@arch@',
       [f'@name@.cpp'],
       cpp_args: args + [f'-march=@arch@'],
-      dependencies: [grex_dep] + deps,
+      dependencies: [grex_dep],
     )
     test(f'test @space_name@ @arch@', exe)
   endforeach
