--- a/test/meson.build
+++ b/test/meson.build
@@ -3,7 +3,7 @@ args = options_sub.get_variable('all_args')
 
 arches = x86_64_levels + ['native']
 
-foreach name : ['basic', 'componentwise', 'horizontal', 'set']
+foreach name : ['basic', 'componentwise', 'horizontal', 'mem', 'set']
   foreach arch : arches
     space_name = name.replace('-', ' ')
     exe = executable(
