Add a conversion test for up to 128-bit vectors and fix some issues - Allow `VectorChecker` to store a parent checker to allow for more useful error messages and allow `check` to be less verbose. - Fix the sub-native conversion, which used the destination type instead of the source type in one place - Use the explicit `SubVector` constructor for sub-native masked arithmetic. - Add PCG-C++ as a dependency to allow for (primitive) fuzz testing.

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,15 +5,16 @@ if ['gcc'].contains(options_sub.get_variable('compiler_id'))
 endif
 
 arches = x86_64_levels + ['native']
+pcg_dep = dependency('pcg-cpp')
 
-foreach name : ['componentwise', 'horizontal', 'mem', 'set']
+foreach name : ['componentwise', 'convert', 'horizontal', 'mem', 'set']
   foreach arch : arches
     space_name = name.replace('-', ' ')
     exe = executable(
       f'test-@name@-@arch@',
       [f'@name@.cpp'],
       cpp_args: args + [f'-march=@arch@'],
-      dependencies: [grex_dep],
+      dependencies: [grex_dep, pcg_dep],
     )
     test(f'test @space_name@ @arch@', exe)
   endforeach
