Add expanding scalar values to a vector together with a test - Fix some issues with `gather` on GCC.

--- a/test/meson.build
+++ b/test/meson.build
@@ -11,6 +11,7 @@ omp_dep = dependency('openmp')
 foreach name, parallel : {
   'componentwise': true,
   'convert': true,
+  'expand': true,
   'gather': false,
   'horizontal': true,
   'mem': true,
