Add upwards value shingling and a test for both kinds of upward shingling

--- a/test/meson.build
+++ b/test/meson.build
@@ -16,6 +16,7 @@ foreach name, parallel : {
   'horizontal': true,
   'mem': true,
   'set': true,
+  'shingle': true,
 }
   deps = [grex_dep, pcg_dep]
   if not parallel
