Add multi-byte loading as well as a test involving Thesauros’s implementation - Add specialized variants on levels 1 and 2 to ensure efficiency - Avoid two 128-bit loads in the 256-bit variant while aligning the data so that per-lane permutations are possible. - Similarly, the 512-bit variant performs one 512-bit load, a relatively fast 32-bit cross-lane permutation, and then per-lane computations. - Add Thesauros as a test dependency again.

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,8 +5,9 @@ if ['gcc'].contains(options_sub.get_variable('compiler_id'))
 endif
 
 arches = x86_64_levels + ['native']
-pcg_dep = dependency('pcg-cpp')
 omp_dep = dependency('openmp')
+pcg_dep = dependency('pcg-cpp')
+thesauros_dep = dependency('thesauros')
 
 foreach name, parallel : {
   'componentwise': true,
@@ -15,10 +16,11 @@ foreach name, parallel : {
   'gather': false,
   'horizontal': true,
   'mem': true,
+  'multibyte': true,
   'set': true,
   'shingle': true,
 }
-  deps = [grex_dep, pcg_dep]
+  deps = [grex_dep, pcg_dep, thesauros_dep]
   if not parallel
     deps += [omp_dep]
   endif
