Simplify testing utilities, support the tuple-like interface, and simplify - Add support for the tuple-like interface for `Vector` and `Mask`, which enables structured bindings and automatic formatting by `{fmt}`. - Check the high-level conversion interface in the corresponding test and simplify it by using more pre-defined tools. - Simplify the `check` operations and add one that compares tuple-like classes. - Add formatting support to the checkers using `format_as`. - Remove the tags from the conversion operations, as they are unnecessary, and separate the mask conversions, which are always safe. - Remove the dependency on `{fmt}`, as `{fmt}` is able to leverage the tuple-like interface for formatting. However, it remains a dependency of the tests.

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,6 +5,7 @@ if ['gcc'].contains(options_sub.get_variable('compiler_id'))
 endif
 
 arches = x86_64_levels + ['native']
+fmt_dep = dependency('fmt')
 omp_dep = dependency('openmp')
 pcg_dep = dependency('pcg-cpp')
 thesauros_dep = dependency('thesauros')
@@ -20,7 +21,7 @@ foreach name, parallel : {
   'set': true,
   'shingle': true,
 }
-  deps = [grex_dep, pcg_dep, thesauros_dep]
+  deps = [fmt_dep, grex_dep, pcg_dep, thesauros_dep]
   if not parallel
     deps += [omp_dep]
   endif
