Fix some issues with GCC in debug mode, though Clang is still unhappy - Make the `constexpr` variables in the static shufflers and zero blenders store `imm8` where that is used, which satisfies GCC. - Resolve some warnings around casts. - Add a test for shuffling with compile-time indices, which sadly fails on Clang with optimizations due to some implementation problem in Clang (which I sadly cannot reproduce in a simple example).

--- a/test/meson.build
+++ b/test/meson.build
@@ -21,6 +21,7 @@ foreach name, parallel : {
   'multibyte': true,
   'set': true,
   'shingle': true,
+  'shuffle': true,
 }
   deps = [fmt_dep, grex_dep, pcg_dep, thesauros_dep]
   if not parallel
