Add `CMakeLists.txt` and improve the Meson build files - In `cpuid.cpp`, use `;` as separator and omit the newline at the end to ease use in CMake. - Do not use `-march=native` if the platform does not support it. - Rename the `test` option to `build_tests`, which is more descriptive and in line with the new CMake naming.

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,9 @@
+# This file is part of https://github.com/KurtBoehm/grex.
+#
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
 project(
   'grex',
   'cpp',
@@ -41,11 +47,11 @@ if not meson.is_subproject()
   )
 endif
 
-if get_option('test')
+if get_option('build_tests')
   if backend == 'x86_64'
     cpp = meson.get_compiler('cpp')
     cpuid = import('fs').read('tools/cpuid.cpp')
-    arches = cpp.run(cpuid, required: true).stdout().split()
+    arches = cpp.run(cpuid, required: true).stdout().split(';')
   else
     arches = []
   endif
