--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
-option('test', type: 'boolean', value: false)
+option('build_tests', type: 'boolean', value: false)
 option(
   'simd_backend',
   type: 'combo',
