Use the CPUID function that is now part of Grex to determine the available x86-64 levels

--- a/meson.build
+++ b/meson.build
@@ -51,7 +51,11 @@ if get_option('build_tests')
   if backend == 'x86_64'
     cpp = meson.get_compiler('cpp')
     cpuid = import('fs').read('tools/cpuid.cpp')
-    arches = cpp.run(cpuid, required: true).stdout().split(';')
+    arches = cpp.run(
+      cpuid,
+      include_directories: include_directories('include'),
+      required: true,
+    ).stdout().split(';')
   else
     arches = []
   endif
