Implement run-time shuffling, shifting by a compile-time constant, and conversion to an array on x86-64, add some helpers, and clean up - Add shuffling using run-time indices with a lot of special cases to ensure near-ideal performance and full compatibility. This includes use of the `vermi2` family of instructions for 1024-bit lookup tables (currently not used for sub-native indices), broadcasts and blending on x86-64-v1, efficient index conversions when shuffling with smaller chunks is required, and many other aspects. - Add logical/arithmetic left/right shift by a compile-time constant number of bits, including an emulated 64-bit arithmetic shift before AVX-512 and an emulated 8-bit arithmetic shift. - Add `to_array`, which uses `store` for vectors, masking (to get 0 and 1 as the only values) and `storeu` intrinsics for broad masks, and a zero-masked move with `storeu` intrinsics for compact masks. - Add `to_array`-based formatters for `Vector` and `Mask` to avoid the ballooning compile-times caused by `{fmt}`’s formatter for tuple-like types. The formatters are automatically included if `FMT_VERSION` is defined and are otherwise optional to maintain Grex’s lack of dependencies. - Add `repeat`, which recursively applies `merge` with a special case for quadrupling XMM registers on AVX-512. - Add `shrink`, which shrinks a vector down to a smaller size while handling super-/sub-native vectors etc. - Add tests for the user-facing functionality (i.e. shuffling, shifting, and conversion to array).

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,7 +5,7 @@
 # file, You can obtain one at https://mozilla.org/MPL/2.0/.
 
 options_sub = subproject('options')
-args = options_sub.get_variable('basic_args')
+args = options_sub.get_variable('basic_args') + ['-fconstexpr-depth=2048', '-ftemplate-depth=2048']
 
 test_arches = {}
 foreach arch : arches
@@ -18,6 +18,53 @@ fmt_dep = fmt_sub.get_variable('fmt_dep')
 omp_dep = dependency('openmp')
 pcg_dep = dependency('pcg-cpp')
 thesauros_dep = dependency('thesauros')
+
+# tests that are separated based on the value and index type
+dynamic_shuffles = []
+foreach name, conf : {
+  'shuffle-dynamic': [['x86_64'], true], # neon
+}
+  backends = conf[0]
+  parallel = conf[1]
+  if backends.contains(backend)
+    deps = [fmt_dep, grex_dep, pcg_dep, thesauros_dep]
+    if not parallel
+      deps += [omp_dep]
+    endif
+    foreach value : ['f64', 'f32', 'i64', 'i32', 'i16', 'i8', 'u64', 'u32', 'u16', 'u8']
+      foreach index : ['u64', 'u32', 'u16', 'u8']
+        foreach arch_name, arch_args : test_arches
+          space_name = name.replace('-', ' ')
+          exe = executable(
+            f'@name@-@value@-@index@-@arch_name@',
+            [f'@name@.cpp'],
+            cpp_args: args
+            + arch_args
+            + [f'-DGREX_VALUE_TYPE=@value@', f'-DGREX_INDEX_TYPE=@index@'],
+            dependencies: [grex_dep] + deps,
+          )
+          test(
+            f'@space_name@ @value@ @index@ @arch_name@',
+            exe,
+            suite: f'@space_name@ @arch_name@',
+            is_parallel: parallel,
+            timeout: -1,
+          )
+          dynamic_shuffles += [[arch_name, exe]]
+        endforeach
+      endforeach
+    endforeach
+  endif
+endforeach
+foreach arch_name, arch_args : test_arches
+  targets = []
+  foreach pair : dynamic_shuffles
+    if pair[0] == arch_name
+      targets += pair[1]
+    endif
+  endforeach
+  alias_target(f'shuffle-dynamic-@arch_name@', targets)
+endforeach
 
 # tests that are separated based on the value type
 foreach name, conf : {
@@ -36,15 +83,15 @@ foreach name, conf : {
       foreach arch_name, arch_args : test_arches
         space_name = name.replace('-', ' ')
         exe = executable(
-          f'test-@name@-@type@-@arch_name@',
+          f'@name@-@type@-@arch_name@',
           [f'@name@.cpp'],
           cpp_args: args + arch_args + [f'-DGREX_TEST_TYPE=@type@'],
           dependencies: [grex_dep] + deps,
         )
         test(
-          f'test @space_name@ @type@ @arch_name@',
+          f'@space_name@ @type@ @arch_name@',
           exe,
-          suite: f'test @space_name@',
+          suite: space_name,
           is_parallel: parallel,
           timeout: -1,
         )
