Add benchmarks for partial loading/storing that informed the update implementation

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,5 @@
 option('build_tests', type: 'boolean', value: false)
+option('build_benchmarks', type: 'boolean', value: false)
 option(
   'simd_backend',
   type: 'combo',
